# QtNextGenRadio

./: Dockerfile.txt  README.md  yoctoqt6.txt
HMIAdapter/: CMakeLists.txt  DBusMediaReceiver.cpp  DBusRadioReceiver.cpp  HMIAdapter.pro
HMIAdapter/inc/: DBusConnectionManager.h  DBusMediaReceiver.h  DBusRadioReceiver.h
InfotainmentCluster/: CMakeLists.txt  InfotainmentCluster.pro  main.cpp  main.qml
InfotainmentCluster/controller/: RadioController.cpp  RadioController.h
InfotainmentCluster/model/: RadioModel.cpp  RadioModel.h
Statemachine/: MainPage.qml  NotificationPage.qml  StartupPage.qml  main.qml  qml.qrc
include/: IIPCReceiver.h  RadioController.h
